--- a/src/index.html
+++ b/src/index.html
@@ -40,5 +40,6 @@
     <load src="partials/extra.html" />
 
     <script type="module" src="/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@1.0.29/bundled/lenis.min.js"></script>
   </body>
 </html>
